<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="horizontal">

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight=".15">
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="0dip"
                  android:layout_height="fill_parent"
                  android:layout_weight=".7"
                  android:paddingTop="20dp">

        <Button android:id="@+id/rooms"
                android:text="@string/rooms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="goToRooms"/>

        <Button android:id="@+id/activities"
                android:text="@string/activities"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="goToActivities"/>

        <Button android:id="@+id/personal_info"
                android:text="@string/personal_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="goToPersonalInfo"/>

        <Button android:id="@+id/settings"
                android:text="@string/settings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="goToSettings"/>

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight=".15">
    </LinearLayout>

</LinearLayout>