<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="horizontal">

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight=".15">
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="0dip"
                  android:layout_height="fill_parent"
                  android:layout_weight=".7"
                  android:paddingTop="20dp">

        <Button android:id="@+id/new_room"
                android:text="@string/new_room"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="createNewRoom"/>

        <Button android:id="@+id/old_rooms"
                android:text="@string/old_rooms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="getOldRooms"/>

        <Button android:id="@+id/invitations"
                android:text="@string/invitations"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="getInvitations"/>

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight=".15">
    </LinearLayout>

</LinearLayout>